# Assistants

./: .coveragerc  .cursorrules  .env  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .repomix-output.txt  AGENTS.md  Agents.md  BACKLOG.md  Dockerfile.test-base  INFRA_AUDIT.md  Makefile  README.md  assistant_refactoring_plan.md  development_notes.md  docker-compose-prod.yml  docker-compose.integration.yml  docker-compose.unit-test.yml  docker-compose.yml  docker_templates.md  llm_context.md  manage.py  memory_ideas1.md  memory_ideas2.md  monitor_queue.py  naming_conventions.md  package-lock.json  poetry_migration_checklist.md  poetry_migration_plan.md  poetry_migration_status.md  project_overview.md  prompt_refactoring_plan.md  pyproject.toml  pytest.ini  refactoring_plan.md  requirements.txt  run_formatters.sh  run_tests.sh  (+1 more)
admin_service/: AGENTS.md  Agents.md  Dockerfile  Dockerfile.test  docker-compose.test.yml  llm_context_admin.md  pyproject.toml
admin_service/src/: config.py  main.py  rest_client.py
admin_service/src/admin_service/: __init__.py
admin_service/src/config/: credentials.yaml  settings.py
admin_service/src/pages/: assistants.py  users.py
admin_service/src/utils/: async_utils.py
admin_service/tests/: .env.test  __init__.py  test_rest_client.py
admin_service/tests/unit/: conftest.py  test_rest_client.py
assistant_service/: Agents.md  Dockerfile  Dockerfile.test  docker-compose.test.yml  llm_context_assistant.md  memory_plan.md  pyproject.toml  requirements.txt
assistant_service/docs/: llm_context_assistant.md  message_system_refactoring.md  queue_standardization.md
assistant_service/src/: main.py  messages_log.txt  metrics.py  orchestrator.py
assistant_service/src/assistants/: __init__.py  base.py  base_assistant.py  factory.py  langgraph_assistant.py  llm_chat.py  openai_assistant.py
assistant_service/src/config/: logger.py  settings.py
assistant_service/src/core/: __init__.py  message_queue.py
assistant_service/src/messages/: __init__.py  base.py  queue_models.py
assistant_service/src/services/: rag_service.py  redis_stream.py  rest_service.py
assistant_service/src/storage/: __init__.py  redis.py  rest_checkpoint_saver.py
assistant_service/src/tools/: base.py  calendar_tool.py  factory.py  memory_tool.py  reminder_tool.py  rest_service_tool.py  sub_assistant_tool.py  time_tool.py  user_fact_tool.py  web_search_tool.py
assistant_service/src/utils/: error_handler.py  retry.py
assistant_service/tests/: .env.test  conftest.py  test_memory_pipeline_e2e.py  test_multi_secretary.py  test_orchestrator.py  test_secretary_llm.py  test_secretary_openai.py
assistant_service/tests/assistants/: test_langgraph_assistant.py
assistant_service/tests/core/: test_message_queue.py
assistant_service/tests/integration/: conftest.py  test_dlq_flow.py  test_orchestrator_integration.py  test_rag_service_integration.py
assistant_service/tests/storage/: test_rest_checkpoint_saver.py
assistant_service/tests/tools/: test_user_fact_tool.py  test_web_search_tool.py
assistant_service/tests/unit/: conftest.py
cron_service/: AGENTS.md  Agents.md  Dockerfile  Dockerfile.test  docker-compose.test.yml  llm_context_cron.md  pyproject.toml  requirements.txt
cron_service/app/: main.py  notify_client.py  redis_client.py  rest_client.py  scheduler.py
cron_service/src/: __init__.py  config.py  main.py  metrics.py  models.py  redis_client.py  rest_client.py  scheduler.py
cron_service/src/jobs/: __init__.py  memory_extraction.py
cron_service/tests/: .env.test  __init__.py  conftest.py  test_scheduler.py
cron_service/tests/unit/: conftest.py  test_memory_extraction.py  test_scheduler.py
google_calendar_service/: .coverage  Agents.md  Dockerfile  Dockerfile.test  docker-compose.test.yml  llm_context_google_calendar.md  pyproject.toml  requirements.txt
google_calendar_service/src/: main.py  metrics.py
google_calendar_service/src/api/: __init__.py  routes.py
google_calendar_service/src/config/: __init__.py  logger.py  settings.py
google_calendar_service/src/schemas/: calendar.py
google_calendar_service/src/services/: __init__.py  calendar.py  redis_service.py  rest_service.py
google_calendar_service/tests/: .env.test  conftest.py  test_routes.py
google_calendar_service/tests/unit/: test_routes.py
rag_service/: AGENTS.md  Dockerfile  Dockerfile.test  README.md  docker-compose.test.yml  llm_context_rag.md  pyproject.toml
rag_service/src/: main.py  metrics.py
rag_service/src/api/: memory_routes.py  routes.py
rag_service/src/config/: settings.py
rag_service/src/models/: memory_models.py  rag_models.py
rag_service/src/services/: memory_service.py  rest_client.py  vector_db_service.py
rag_service/tests/: .env.test  test_api_routes.py  test_vector_db_service.py
rag_service/tests/unit/: conftest.py  test_memory_routes.py  test_memory_service.py  test_vector_db_service.py
rest_service/: Agents.md  Dockerfile  Dockerfile.test  alembic.ini  docker-compose.test.yml  llm_context_rest.md  manage.py  pyproject.toml  requirements.txt  run_tests.sh
rest_service/alembic/: env.py  script.py.mako
rest_service/alembic/versions/: 20250321_111905_11f7771296eb_initial_migration.py  20250505_115509_591852cc38c8_autogenerate.py  (+25 more)
rest_service/app/: config.py  database.py  main.py  models.py
rest_service/src/: config.py  database.py  main.py  metrics.py  models.py
rest_service/tests/: .env.test  conftest.py  test_assistants.py  test_calendar.py  test_cron_jobs.py  test_dummy.py  test_secretaries.py  test_tasks.py  test_user_summaries.py  test_users.py
shared_models/: README.md  __init__.py  assistant_examples.py  assistant_schemas.py  calendar.py  cron_schemas.py  pyproject.toml  setup.py
shared_models/tests/: .env.test  __init__.py  conftest.py  test_calendar.py  test_queue.py
telegram_bot_service/: Dockerfile  Dockerfile.test  docker-compose.test.yml  llm_context_tg_bot.md  pyproject.toml  requirements.txt
telegram_bot_service/src/: main.py  metrics.py
telegram_bot_service/tests/: .env.test  test_smoke.py
(+335 files in other folders)
