[tool.poetry]
name = "admin-service"
version = "0.1.0"
description = "Admin panel service for Smart Assistant"
authors = ["Your Name <your.email@example.com>"]
packages = [{ include = "admin_service/src" }]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.32.0"
streamlit-authenticator = "^0.3.2"
PyYAML = "^6.0"
httpx = "^0.27.0"
pydantic = "^2.6.4"
python-dotenv = "^1.0.1"
structlog = ">=24.1.0"
shared-models = {path = "../shared_models"}

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
flake8-pyproject = "^1.2.3"
mypy = "^1.6.1"
pylint = "^3.0.2"
autoflake = "^2.3.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.23.8"
pytest-cov = "^4.1.0"
pytest-env = "^1.1.5"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
asyncio_mode = "auto" 