[tool.poetry]
name = "admin-service"
version = "0.1.0"
description = "Admin panel service for Smart Assistant"
authors = ["Your Name <your.email@example.com>"]
packages = [{ include = "admin_service/src" }]

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.32.0"
streamlit-authenticator = "^0.3.2"
PyYAML = "^6.0"
httpx = "^0.27.0"
pydantic = "^2.12.0"
python-dotenv = "^1.0.1"
structlog = ">=24.1.0"
shared-models = {path = "../shared_models"}
prometheus-client = "^0.19.0"
urllib3 = ">=2.6.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.23.8"
pytest-cov = "^4.1.0"
pytest-env = "^1.1.5"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
asyncio_mode = "auto" 

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src"]
extend-exclude = ["alembic/versions"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E203"]
fixable = ["ALL"]
per-file-ignores = {"*/__init__.py" = ["F401"]}