[tool.poetry]
name = "assistant-service"
version = "0.1.0"
description = "Assistant Service for Smart Assistant"
authors = ["Your Name <your.email@example.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
shared-models = { path = "../shared_models" }
openai = "^1.3.0"
redis = "^5.2.1"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
python-dotenv = "^1.0.0"
httpx = "^0.25.1"
structlog = "^24.1.0"
langchain = "^0.3.20"
langchain-openai = "^0.3.11"
langchain-community = "^0.3.20"
langchain-core = "^0.3.47"
langgraph = "^0.3.21"
pytz = "^2024.1"
typing-extensions = "^4.9.0"
tavily-python = "^0.5.4"
asyncpg = "^0.29.0"
psycopg = {extras = ["binary"], version = "^3.2.6"}
aiopg = "^1.4.0"
sqlalchemy = "^2.0.31"
alembic = "^1.15.2"

[tool.poetry.group.dev.dependencies]
shared-models = { path = "../shared_models" }

[tool.poetry.group.test.dependencies]
shared-models = { path = "../shared_models" }
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
asyncio_mode = "auto" 