[tool.poetry]
name = "assistant-service"
version = "0.1.0"
description = "Assistant Service for Smart Assistant"
authors = ["Your Name <your.email@example.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
shared-models = { path = "../shared_models" }
openai = "^1.3.0"
redis = "^5.2.1"
pydantic = "^2.12.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
httpx = "^0.27.0"
structlog = "^24.1.0"
langchain = "^1.1.0"
langchain-openai = "^1.1.0"
langchain-core = "^1.1.0"
langgraph = "^1.0.4"
pytz = "^2024.1"
typing-extensions = "^4.9.0"
tavily-python = "^0.5.4"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.31"
alembic = "^1.15.2"
prometheus-client = "^0.19.0"
urllib3 = "^2.6.0"
tenacity = "^8.2.3"
pybreaker = "^1.2.0"

[tool.poetry.group.dev.dependencies]

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E203"]
fixable = ["ALL"]
per-file-ignores = {"*/__init__.py" = ["F401"], "tests/**/conftest.py" = ["E402"]}