[tool.poetry]
name = "cron_service"
version = "0.1.0"
description = "Cron Service for Smart Assistant Project"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
apscheduler = "^3.10.1"
requests = "^2.31.0"
sqlmodel = "^0.0.16"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
redis = "^5.0.1"
pytz = "^2024.1"
shared_models = {path = "../shared_models"}
python-dateutil = "^2.8.2"
httpx = "^0.27.0"
structlog = "^24.1.0"
prometheus-client = "^0.19.0"

[tool.poetry.group.test.dependencies]
shared_models = {path = "../shared_models"}
pytest = "^8.0.2"
pytest-mock = "^3.12.0"
pytest-asyncio = "^0.23.5"
requests-mock = "^1.11.0"
pytest-cov = "^4.1.0"
python-dateutil = "^2.8.2"
pytz = "^2024.1"
structlog = "^24.1.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
mypy_path = "src" 

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E203"]
fixable = ["ALL"]
per-file-ignores = {"*/__init__.py" = ["F401"]}