[tool.poetry]
name = "rag-service"
version = "0.1.0"
description = "RAG Service for Smart Assistant"
authors = ["Your Name <your.email@example.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
shared-models = { path = "../shared_models" }
fastapi = "^0.124.0"
uvicorn = "^0.27.1"
pydantic = "^2.12.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.1"
structlog = "^24.1.0"
httpx = "^0.27.0"
openai = "^1.0.0"
prometheus-client = "^0.19.0"
starlette = ">=0.49.1"

[tool.poetry.group.dev.dependencies]
shared-models = { path = "../shared_models" }
mypy = "^1.6.1"

[tool.poetry.group.test.dependencies]
shared-models = { path = "../shared_models" }
pytest = "^8.3.5"
pytest-asyncio = "^0.23.8"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
mypy_path = "src"

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E203"]
fixable = ["ALL"]
per-file-ignores = {"*/__init__.py" = ["F401"]}
