[tool.poetry]
name = "rest-service"
version = "0.1.0"
description = "REST API service for Smart Assistant"
authors = ["Your Name <your.email@example.com>"]
packages = [{ include = "rest_service/src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.124.0"
uvicorn = "^0.27.1"
sqlmodel = "^0.0.23"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.18"
pydantic-settings = "^2.1.0"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
python-dateutil = "^2.8.2"
croniter = "^2.0.1"
openai = "^1.12.0"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
starlette = ">=0.49.1"
structlog = ">=24.1.0"
pydantic = "^2.12.0"
alembic = "^1.13.1"
pgvector = "^0.2.5"
shared-models = {path = "../shared_models"}
prometheus-client = "^0.19.0"
redis = "^5.2.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
pytest-env = "^1.1.3"
aiosqlite = "^0.20.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
asyncio_mode = "auto" 

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src"]
extend-exclude = ["alembic/versions"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E203"]
fixable = ["ALL"]
per-file-ignores = {"*/__init__.py" = ["F401"]}