[tool.poetry]
name = "shared-models"
version = "0.1.0"
description = "Shared Pydantic models for Smart Assistant"
authors = ["Your Name <your.email@example.com>"]
packages = [{ include = "shared_models", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
mypy = "^1.6.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E203"]
fixable = ["ALL"]
per-file-ignores = {"*/__init__.py" = ["F401"]}

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true 